--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@soroban-react/core": "^1.0.2",
+    "@soroban-react/freighter": "^1.0.0",
+    "@soroban-react/types": "^1.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -13,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "soroban-client": "^0.1.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
