--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@soroban-react/core": "^1.0.2",
+    "@soroban-react/connect-button": "^1.0.7",
+    "@soroban-react/core": "^1.0.3",
     "@soroban-react/freighter": "^1.0.0",
     "@soroban-react/types": "^1.0.0",
+    "@soroban-react/wallet-data": "^1.0.3",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
@@ -16,8 +18,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "soroban-client": "^0.1.3",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
